--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
     "b": "alamode src -o build",
-    "d": "yarn-s d1",
-    "d1": "NODE_DEBUG=doc doc src/index.js -g",
+    "d": "yarn-s d1 d2",
+    "d1": "NODE_DEBUG=doc doc src/reducer.js -g",
+    "d2": "NODE_DEBUG=doc doc src/lib/index.js -g",
+    "d3": "NODE_DEBUG=doc doc src/lib/run.js -g",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
@@ -42,5 +44,8 @@
     "eslint-config-artdeco": "1.0.1",
     "yarn-s": "1.1.0",
     "zoroaster": "3.5.2"
+  },
+  "dependencies": {
+    "promto": "1.0.1"
   }
 }
