--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "test-build": "ALAMODE_ENV=test-build yarn test",
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
-    "b": "alamode src -o build",
-    "d": "yarn-s d1 d2",
-    "d1": "NODE_DEBUG=doc doc src/reducer.js -g",
+    "b": "alamode src -o build -s",
+    "d": "yarn-s d1 d2 d3",
+    "d1": "NODE_DEBUG=doc doc src/lib/reducer.js -g",
     "d2": "NODE_DEBUG=doc doc src/lib/index.js -g",
     "d3": "NODE_DEBUG=doc doc src/lib/run.js -g",
+    "d4": "NODE_DEBUG=doc doc src/lib/reducer.js -g",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
