--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "d1": "NODE_DEBUG=doc doc src/lib/reducer.js -g",
     "d2": "NODE_DEBUG=doc doc src/lib/index.js -g",
     "d3": "NODE_DEBUG=doc doc src/lib/run.js -g",
-    "d4": "NODE_DEBUG=doc doc src/lib/reducer.js -g",
+    "d4": "NODE_DEBUG=doc doc src/index.js -g",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
