--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
     "b": "alamode src -o build -s",
-    "d": "yarn-s d1 d2 d3, d4, d5",
+    "d": "yarn-s d1 d2 d3 d4 d5 d6",
     "d1": "NODE_DEBUG=doc doc src/lib/reducer.js -g",
     "d2": "NODE_DEBUG=doc doc src/lib/index.js -g",
     "d3": "NODE_DEBUG=doc doc src/lib/run.js -g",
     "d4": "NODE_DEBUG=doc doc types.js -g",
     "d5": "NODE_DEBUG=doc doc test/context/index.js -g",
+    "d6": "NODE_DEBUG=doc doc src/index.js -g",
     "build": "yarn-s d b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
     "e": "node example",
