--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@zoroaster/reducer",
   "version": "1.1.0",
   "description": "The test suite reducer to run each test and see whether it passes or fails; and the runner which adds time-outs and evaluates contexts.",
-  "main": "build",
+  "main": "build/index.js",
+  "module": "src/index.js",
   "scripts": {
     "t": "zoroaster -a",
     "test": "yarn t test/spec test/mask",
@@ -12,21 +13,23 @@
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
     "b": "alamode src -o build -s",
-    "d": "yarn-s d1 d2 d3 d5 d6",
-    "d1": "NODE_DEBUG=doc doc src/lib/reducer.js -g",
+    "d": "yarn-s d1 externs",
+    "d1": "typal src -c",
     "d2": "NODE_DEBUG=doc doc src/lib/index.js -g",
     "d3": "NODE_DEBUG=doc doc src/lib/run-test.js -g",
     "d5": "NODE_DEBUG=doc doc test/context/index.js -g",
     "d6": "NODE_DEBUG=doc doc src/index.js -g",
     "build": "yarn-s d b doc",
-    "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
-    "e": "node example",
-    "example/": "yarn e example/example.js"
+    "e": "alanode",
+    "example/": "yarn e example/example.js",
+    "externs": "typal externs.js -e"
   },
   "files": [
     "build",
-    "types"
+    "types",
+    "externs.js"
   ],
+  "externs": "externs.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/contexttesting/reducer.git"
@@ -42,13 +45,13 @@
   },
   "homepage": "https://github.com/contexttesting/reducer#readme",
   "devDependencies": {
-    "alamode": "1.8.2",
-    "documentary": "1.21.2",
-    "eslint-config-artdeco": "1.0.1",
-    "yarn-s": "1.1.0",
-    "zoroaster": "3.7.2"
+    "alamode": "^2.0.0",
+    "documentary": "^1.26.5",
+    "eslint-config-artdeco": "^1.0.1",
+    "yarn-s": "^1.1.0",
+    "zoroaster": "^3.13.0"
   },
   "dependencies": {
-    "promto": "1.0.1"
+    "promto": "^1.1.1"
   }
 }
