--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md",
     "b": "alamode src -o build -s",
-    "d": "yarn-s d1 externs",
-    "d1": "typal src -c",
-    "d2": "NODE_DEBUG=doc doc src/lib/index.js -g",
-    "d3": "NODE_DEBUG=doc doc src/lib/run-test.js -g",
+    "d": "yarn-s d1 d2",
+    "d1": "typal externs.js types/index.js",
+    "d2": "typal src -c -t node_modules/@zoroaster/types/types/test-suite.xml,types/reducer.xml",
     "d5": "NODE_DEBUG=doc doc test/context/index.js -g",
-    "d6": "NODE_DEBUG=doc doc src/index.js -g",
     "build": "yarn-s d b doc",
     "e": "alanode",
     "example/": "yarn e example/example.js",
@@ -45,6 +43,7 @@
   },
   "homepage": "https://github.com/contexttesting/reducer#readme",
   "devDependencies": {
+    "@zoroaster/types": "^0.0.0",
     "alamode": "^2.0.0",
     "documentary": "^1.26.5",
     "eslint-config-artdeco": "^1.0.1",
